# TradeForgePy

./: .env  .gitignore  README.md  __init__.py  check_file.py  improvements.txt  minimal_openapi.json  pyproject.toml  requirements.txt  run.bat
apps/charty/: index.css  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/charty/chart-test/: package.json
apps/charty/src/: App.tsx  index.css  main.tsx
captured_data_logs/: fastapi_service_20250610_183717.txt  fastapi_service_20250610_184403.txt  fastapi_service_20250610_184708.txt  fastapi_service_20250610_202514.txt  fastapi_service_20250610_203218.txt
examples/: 01_get_accounts.py  01_test_http_client.py  01a_test_direct_auth.py  01b_test_truly_direct.py  02_search_contracts.py  02_test_provider_rest.py  03_get_historical_data.py  03_test_provider_streams.py  04_order_management.py  05_positions_and_trades.py  06_full_stream.py  07_get_historical_orders.py  10_unsubscribe_streams.py
fastapi_service/app/: broadcast.py  dependencies.py  main.py
providers/: __init__.py
providers/topstepx/: __init__.py  provider.py  streams.py
src/tradeforgepy/: __init__.py  config.py
src/tradeforgepy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_scripts/: .env  data_capture.py  openai.json  schemas_ts.py  simple_swagger.json  sw.py
test_scripts/captured_data_logs/: signalr_messages_20250605_084947.txt  signalr_messages_20250605_085328.txt  signalr_messages_20250605_154733.txt  signalr_messages_20250605_230314.txt  signalr_messages_20250605_231128.txt
(+40 files in other folders)
